--- a/Blood Bank System/Blood Bank System/Base.lproj/Main.storyboard
+++ b/Blood Bank System/Blood Bank System/Base.lproj/Main.storyboard
@@ -467,6 +467,89 @@
             </objects>
             <point key="canvasLocation" x="4640" y="370"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="I7J-yD-gTP">
+            <objects>
+                <viewController id="Th8-vD-i0s" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="y29-kk-b8G">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="V8Y-U0-rZI">
+                                <rect key="frame" x="20" y="123" width="353" height="675"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="c2D-vY-13u">
+                                        <rect key="frame" x="0.0" y="0.0" width="353" height="333.66666666666669"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Communication Preferences" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4lU-Xo-aw5">
+                                                <rect key="frame" x="0.0" y="0.0" width="353" height="333.66666666666669"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                                <color key="textColor" systemColor="systemRedColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AD1-Pv-6Xd">
+                                        <rect key="frame" x="0.0" y="341.66666666666674" width="353" height="333.33333333333326"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="55" translatesAutoresizingMaskIntoConstraints="NO" id="8JD-y4-RJw">
+                                                <rect key="frame" x="20" y="20" width="171.66666666666666" height="186.33333333333334"/>
+                                                <subviews>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="PBX-Sd-DEd">
+                                                        <rect key="frame" x="0.0" y="0.0" width="171.66666666666666" height="76.666666666666671"/>
+                                                        <subviews>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="idj-8c-MHC">
+                                                                <rect key="frame" x="0.0" y="0.0" width="171.66666666666666" height="34.333333333333336"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="filled" title="Email Addresses" cornerStyle="medium"/>
+                                                            </button>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="lakshmi99@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bim-ga-50N">
+                                                                <rect key="frame" x="0.0" y="42.333333333333314" width="171.66666666666666" height="34.333333333333343"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                    </stackView>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="pax-uG-mOZ">
+                                                        <rect key="frame" x="0.0" y="131.66666666666669" width="171.66666666666666" height="54.666666666666657"/>
+                                                        <subviews>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yy5-8b-lb4">
+                                                                <rect key="frame" x="0.0" y="0.0" width="171.66666666666666" height="34.333333333333336"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="filled" title="Phone Numbers" cornerStyle="medium"/>
+                                                            </button>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6605281456" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4qp-cw-MPp">
+                                                                <rect key="frame" x="0.0" y="34.333333333333258" width="171.66666666666666" height="20.333333333333329"/>
+                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                <nil key="textColor"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Fau-Aa-pO7"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="V8Y-U0-rZI" firstAttribute="leading" secondItem="Fau-Aa-pO7" secondAttribute="leading" constant="20" id="A0k-td-P3Q"/>
+                            <constraint firstItem="Fau-Aa-pO7" firstAttribute="trailing" secondItem="V8Y-U0-rZI" secondAttribute="trailing" constant="20" id="Q4L-3g-jFz"/>
+                            <constraint firstItem="V8Y-U0-rZI" firstAttribute="top" secondItem="Fau-Aa-pO7" secondAttribute="top" constant="20" id="YAW-3g-iFz"/>
+                            <constraint firstItem="Fau-Aa-pO7" firstAttribute="bottom" secondItem="V8Y-U0-rZI" secondAttribute="bottom" constant="20" id="zAH-oE-jjz"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="OFa-XL-a0r"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8au-hN-DLd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5403" y="424"/>
+        </scene>
         <!--Schedule Appointment-->
         <scene sceneID="BR2-40-FkY">
             <objects>
@@ -1182,6 +1265,9 @@
                                                 <buttonConfiguration key="configuration" style="filled" title="Communication Preferences" cornerStyle="medium">
                                                     <color key="baseBackgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <segue destination="Th8-vD-i0s" kind="show" id="chx-ao-vlW"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
